; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/mlx5tool/extr_mlx5tool.c_mlx5tool_dump_force.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/mlx5tool/extr_mlx5tool.c_mlx5tool_dump_force.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5_tool_addr = type { i32 }

@MLX5_FWDUMP_FORCE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"MLX5_FWDUMP_FORCE\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.mlx5_tool_addr*)* @mlx5tool_dump_force to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mlx5tool_dump_force(i32 %0, %struct.mlx5_tool_addr* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.mlx5_tool_addr*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.mlx5_tool_addr* %1, %struct.mlx5_tool_addr** %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @MLX5_FWDUMP_FORCE, align 4
  %8 = load %struct.mlx5_tool_addr*, %struct.mlx5_tool_addr** %5, align 8
  %9 = call i32 @ioctl(i32 %6, i32 %7, %struct.mlx5_tool_addr* %8)
  %10 = icmp eq i32 %9, -1
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = call i32 @warn(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  store i32 1, i32* %3, align 4
  br label %14

13:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %14

14:                                               ; preds = %13, %11
  %15 = load i32, i32* %3, align 4
  ret i32 %15
}

declare dso_local i32 @ioctl(i32, i32, %struct.mlx5_tool_addr*) #1

declare dso_local i32 @warn(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
